--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,39 @@
     padding: 0;
     box-sizing: border-box;
 }
-  
+
+body
+{
+    background-color:black;
+}
+
+p
+{
+    color:white;
+
+}
+
+header
+{
+   display:flex;
+   align-items: center;
+   justify-content:center;
+   font-size:40px;
+   padding:40px;
+   border-bottom:5px solid white;
+   text-align: center;
+
+
+}
+
 /* Mobile Styles */
 @media only screen and (max-width: 400px) 
 {
-
+    header p
+    {
+        line-height:1.4;
+        word-spacing: 15px;
+    }
 }
   
 /* Tablet Styles */
