--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,22 +21,88 @@ header
    display:flex;
    align-items: center;
    justify-content:center;
-   font-size:40px;
+   font-size:80px;
    padding:40px;
-   border-bottom:5px solid white;
+   border-bottom:10px solid white;
    text-align: center;
 
 
 }
 
+.middle
+{
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+}
+
+.scoreH, .scoreC
+{
+    gap:2.5px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    font-size:110px;
+    width:50%;
+    color:white;
+    border-bottom:10px solid white;
+}
+
+.scoreH
+{
+    border-right:10px solid white;
+}
+
+
+.table
+{
+    display:flex;
+    flex-direction: row;
+    justify-content:center;
+    flex-wrap:wrap;
+    width:600px;
+    padding-top:40px;
+    color:white;
+}
+
+.button
+{
+    width:160px;
+    height:160px;
+    background-color: red;
+    border:1px solid white;
+}
+
+.winner
+{
+    width:260px;
+    margin-top:190px;
+    background-color: black;
+    border:none;
+}
+
 /* Mobile Styles */
 @media only screen and (max-width: 400px) 
 {
-    header p
+    header
     {
+        font-size:40px;
         line-height:1.4;
         word-spacing: 15px;
+        border-bottom:5px solid white;
     }
+
+    .scoreC, .scoreH
+    {
+        font-size:65px;
+        border-bottom:5px solid white;
+    }
+
+    .scoreH
+    {
+        border-right:5px solid white;
+    }
+
 }
   
 /* Tablet Styles */
