--- a/styles/styles.css
+++ b/styles/styles.css
@@ -209,10 +209,82 @@ footer
 }
   
 /* Tablet Styles */
-@media only screen and (min-width: 431px) and (max-width: 1535px)
+@media only screen and (min-width: 931px) and (max-width: 1535px)
 {
 
+    header
+    {
+        font-weight: 700;
+        display:flex;
+        align-items: center;
+        justify-content:center;
+        font-size:60px;
+        padding:35px;
+        border-bottom:10px solid white;
+        text-align: center;
+    }
 
+    footer
+    {
+        height: 125px;
+    }
+
+    .scoreC, .scoreH
+    {
+        border-bottom:0;
+        font-size:120px;
+        width:24%;
+    }
+
+    .scoreH
+    {
+        order:1;
+        border-right:10px solid white;
+    }
+
+    .middle
+    {
+        justify-content:space-between;
+    }
+
+    .table
+    {
+
+        width:625px;
+        padding-top:110px;
+        padding-bottom: 115px;
+        color:white;
+        order:2;
+    }
+
+    .button, .winner
+    {
+        font-size:20px;
+        width:145px;
+        height:145px;
+        border-radius: 50%;
+    
+    }
+    .winner
+    {
+        margin:25px;
+    }
+    .icon
+    {
+        width:135px;
+    }
+    .winner .icon
+    {
+        width: 80px;
+    }
+    .scoreC
+    {
+        order:3;
+        border-left: 10px solid white;
+    }
+
+    
+    
 }
   
 /* Desktop Styles */
