--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,7 +131,7 @@ footer
 
 .winner .icon
 {
-    width: 100px;
+    width: 90px;
 }
 
 .button :hover
@@ -219,10 +219,17 @@ footer
     }
 
 }
-  
-/* Tablet Styles */
+  /* Desktop Styles 1 */
 @media only screen and (min-width: 931px) and (max-width: 1535px)
 {
+
+    figure
+    {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30%;
+    }
 
     header
     {
@@ -262,7 +269,8 @@ footer
     .table
     {
 
-        width:625px;
+        width:46%;
+        padding: 0px 3%;
         padding-top:110px;
         padding-bottom: 115px;
         color:white;
@@ -279,7 +287,7 @@ footer
     }
     .winner
     {
-        margin:25px;
+        margin:25px 11px;
     }
     .icon
     {
@@ -299,7 +307,7 @@ footer
     
 }
   
-/* Desktop Styles */
+/* Desktop Styles 2 */
 @media only screen and (min-width: 1536px)
 {
 
